# jupyterlab-dagitty

./: .gitignore  MANIFEST.in  README.md  build_dagitty.sh  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml
binder/: environment.yml  postBuild
examples/: Output_demo.ipynb  Python_demo.ipynb  R_demo.ipynb  car_model_driver.dag  display_dagitty.R
jupyterlab-dagitty/: __init__.py  _version.py
jupyterlab_dagitty/: __init__.py  dag.py
src/: _dagitty.d.ts  icons.ts  index.ts
style/: index.css
style/icons/: README.md
